[package]
name = "shield"
version = "0.1.0"
publish = false
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
smithay = "0.7.0"
sys-locale = "0.3.2"
unic-langid = "0.9.6"
unic-locale = "0.9.6"
wayland-server = "0.31.9"
smithay-client-toolkit = "0.19.2"
wayland-client = "0.31.10"
raw-window-handle = "0.6.2"
pollster = "0.4.0"
wgpu = "24.0.1"
anyhow = "1.0.98"
derive-getters = "0.5.0"
vello = "0.5.0"
pulseaudio = { git = "https://github.com/8roken/pulseaudio-rs.git" }
rustix = "1.0.8"
wayland-backend = "0.3.11"
crossbeam = "0.8.4"
parley = "0.5.0"
config = "0.15.14"
